2017-09-14 Fixed events problem in eKeyboard and devices with touchscreen and mouse
2017-09-14 Added new addon Heading
2017-09-12 Fixed problem with dragging in source list.
2017-09-11 Added ended event for animation addon
2017-09-11 Fixed problem with preview and Slideshow. Fixed problem with playing slideshow without loaded audio.
2017-09-04 Added WCAG support for Image Gap and Image Source
2017-09-04 Fixed problem with multiple calling WCAG on elements. Added WCAG for Image ID.
2017-08-31 Added WCAG support for Table.
2017-08-29 Added message watcher for listening on keydown event outside iframe for WCAG
2017-08-25 Added WCAG support for Image ID
2017-08-25 Added full support for WCAG in Text module
2017-08-24 Added WCAG support for Multiplegap
2017-08-23 Fixed problem with disabling source list by Limited check. Removed commons.js from repository. Added to addons tests building commons.js.
2017-08-22 Fixed problem with using chars and numbers in math addon.
2017-08-22 Added to audio force loading audio. Upgraded sinon to 2.4.1.
2017-08-17 Fixed problem with scaling popup
2017-08-14 Added go to last visited page for previous page button.
2017-08-14 Fixed problem with default keyboard navigation in browser while using player keyboard navigation
2017-08-14 Added keyboard navigation for Single State Button and Double State Button. Fixed keyboard navigation for addon buttons.
2017-08-14 Added keyboard navigation for ordering module.
2017-08-14 Removed unnecessary text from SVG2 addon.
2017-08-10 Added keyboard navigation (WCAG) for connection addon.
2017-08-09 Added gotoCommonPageId, setHeaderVisibility, setFooterVisibility commands for player.
2017-08-09 Fixed problem with double mathjax rendering in ordering module.
2017-08-08 Added keyboard navigation (WCAG) to Source List module and draggable gaps in Text module
2017-08-08 Added WCAG for GotoPageButton.
2017-08-04 Added EOG event for Hangman addon