@@ -42,6 +42,8 @@
     height: 100%;
     top: 0px;
     left: 0px;
+    color: transparent;
+    overflow: hidden;
 }
 
 .video-container .CustomControlsBar-wrapper {
