@@ -1,7 +1,7 @@
 <div class="video-container">
-        <video class="video-container-video">
-            Video playback is not supported on your browser.
-        </video>
-        <div class="captions-container"></div>
-        <div class="video-container-mask"></div>
+    <video class="video-container-video">
+        Video playback is not supported on your browser.
+    </video>
+    <div class="captions-container"></div>
+    <div class="video-container-mask"></div>
 </div>
