@@ -1,3 +1,4 @@
+2017-09-15 Added alternative text property for video and image
 2017-09-14 Fixed events problem in eKeyboard and devices with touchscreen and mouse
 2017-09-14 Added new addon Heading
 2017-09-12 Fixed problem with dragging in source list.
